[tool.poetry]
name = "pandandic"
version = "0.0.0"
description = "A typed dataframe helper"
license = "LICENCE.md"
authors = ["Will Martin <will.st4@gmail.com>"]
readme = "README.md"
repository = "https://github.com/w-martin/pandandic"
packages = [{ include = "pandantic", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1"
typing_extensions = { version = "^4", python = "<3.11" }

[tool.poetry.group.test.dependencies]
nose2 = "^0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
